<TinUI, a modern frame to render various widgets element for tkinter in one control.>
    Copyright (C) <2021-present>  <Smart-Space | Junming Zhang> <tsan-zane@outlook.com | smart-space@qq.com>
    2019（原型框架）2021（正式命名TinUI发布）
基于GPLv3和LGPLv3发布

==========更新日志==========


==========6.1==========
2025-
1. treeview拓展面板适配选项背景宽度
2. 纵向、横向面板添加控件未指定尺寸时，获取控件对应方向上的尺寸

==========6.0==========
2025-8-2
1. 简化uid创建
2. picker选项响应鼠标进入颜色改为同按钮背景色
3. 弃用waitbar1, waitbar2, swipecontrol, info, canvas，但未删除
4. listview, notebook, treeview支持对齐方式
5. 控件创建函数删除不必要的变量
6. 支持版面布局Panel:
- ExpandPanel: one widget/Panel，响应窗口缩放
- VerticalPanel: multiple widgets/Panels，纵向排列
- HorizontalPanel: multiple widgets/Panels，横向排列
支持（expand, vertical/horizontal）:
title v/h
paragraph v/h
button expand, v/h
label expand, v/h
checkbutton v/h
entry expand, v/h
separate expand, v/h
radiobutton v/h
link v/h
combobox v/h
progressbar expand, v/h
table v/h
onoff v/h
spinbox v/h
scalebar v/h
waitbar3 expand, v/h
textbox expand, v/h
listbox expand, v/h
listview expand, v/h
ui expand, v/h
pipspager expand, v/h
notebook expand, v/h
ratingbar v/h
radiobox v/h
pivot v/h
button2 expand, v/h
waitframe expand, v/h
treeview expand, v/h
passwordbox expand, v/h
image v/h
togglebutton v/h
picker v/h
menubutton v/h
barbutton v/h
breadcrumb v/h

==========5.38==========
2025-7-19
1. 简化大部分圆角矩形绘制代码
2. 新增breadcrumb，导航栏控件

==========5.37==========
2025-7-17
1. labelframe在无标题时仅绘制边框
2. 修复button2在无图标字符时删除空文本的错误
3. 支持自定义对话框

==========5.36==========
2025-7-14
1. 针对持续维护的tinuilight, tinuidark，使用参数覆盖而非直接指定颜色，即可额外自定义各控件颜色
2. menubutton, picker添加点击时按钮颜色参数
3. 弹出窗口在最后一轮动画才会尝试获取焦点

==========5.35==========
2025-7-7
1. 将所有内置实体控件加入ui.windows，在TinUI销毁后进行销毁
2. listview.select会同步视图
3. 优化渲染并修复若干小问题
4. 对话框接受键盘事件选择和确定按钮
5. link返回值添加背景元素

==========5.34==========
2025-7-6
1. TinUIXml的clean将会完全回退到初始化
2. listview添加getsel方法（返回nowon）以及select方法（传入index）

==========5.33==========
2025-7-5
1. 修复listview删除元素后标识线错位的问题
2. combobox, listbox添加过渡色