@@ -4,7 +4,8 @@
         <title text='tooltip'></title>
     </line>
     <line>
-        <paragraph text='TinUI的浮动提示文本。' width='580'></paragraph>
+        <paragraph text='TinUI的浮动提示文本。' width='580'>para</paragraph>
+        <tooltip uid='para' text='tooltip content'></tooltip>
     </line>
 </line>
 </tinui>
