@@ -7,9 +7,10 @@
 
 
 ==========6.1==========
-2025-
+2025-8-10
 1. treeview拓展面板适配选项背景宽度
 2. 纵向、横向面板添加控件未指定尺寸时，获取控件对应方向上的尺寸
+3. TinUIXml支持tooltip
 
 ==========6.0==========
 2025-8-2
